<resources>
    <string name="app_name">FitMe_Demo</string>

    <!--Strings Used for Log-in-->
    <string name="facebook_app_id">1259685300782841</string>
    <string name="kakao_app_key">5c766b4082d1e44cf47e78bcf3d0246e</string>

    <!--Strings Used In Menu-->
    <string name="action_navigation">Drawer</string>
    <string name="action_save">Save</string>

    <!--Error Messages-->
    <string name="log_error_the_read_failed">Read Failed</string>

    <!--Strings Used for MainActivity Layout-->
    <string name="my_plan">My Plan</string>
    <string name="my_report_card">My Report</string>

    <!--Strings Used for PlanActivity Layout-->
    <string name="add_a_plan">Add a Plan</string>

    <!--Strings for Navigation Drawer-->
    <string-array name="navigation_drawer_list">
        <item>@string/drawer_my_profile</item>
        <item>@string/drawer_my_plan</item>
        <item>@string/drawer_search_plan</item>
        <item>@string/drawer_log_out</item>
    </string-array>

    <!--Strings for Navigation Drawer Toggle-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="drawer_my_profile">MyProfile</string>
    <string name="drawer_my_plan">MyPlan</string>
    <string name="drawer_search_plan">Search Plan</string>
    <string name="drawer_info">Information</string>
    <string name="drawer_alarm">Alarm Setting</string>
    <string name="drawer_log_out">Logout</string>

    <!--Strings for Exercise Level-->
    <string-array name="exercise_experience">
        <item>@string/exercise_experience_beginner</item>
        <item>@string/exercise_experience_intermediate</item>
        <item>@string/exercise_experience_advanced</item>
    </string-array>

    <string name="exercise_experience_beginner">Beginner</string>
    <string name="exercise_experience_intermediate">Intermediate</string>
    <string name="exercise_experience_advanced">Advanced</string>

    <!--Strings for Exercise Goal-->
    <string-array name="exercise_goal">
        <item>@string/exercise_goal_weight_loss</item>
        <item>@string/exercise_goal_weight_gain</item>
        <item>@string/exercise_goal_tone_body</item>
    </string-array>

    <string name="exercise_goal_weight_loss">Weight Loss</string>
    <string name="exercise_goal_weight_gain">Weight Gain</string>
    <string name="exercise_goal_tone_body">Tone Body</string>

    <string-array name="user_gender">
        <item>@string/gender_male</item>
        <item>@string/gender_female</item>
    </string-array>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <string name="profile_hint_email">Your Email (required) </string>
    <string name="profile_hint_name">Your Name (required)</string>
    <string name="profile_hint_phone">Your Phone Number</string>
    <string name="profile_hint_birthday">Year of Birth</string>

    <string name="profile_hint_goal">Choose Your Fitness Goal</string>
    <string name="profile_hint_password">Password (required)</string>
    <string name="profile_hint_height">Your Height</string>
    <string name="profile_hint_weight">Your Weight</string>
    <string name="profile_hint_experience">Select Your Experience</string>
    <string name="profile_hint_gender">Choose Your Gender</string>

    <!--Strings For Layouts-->
    <string name="main_progress">Progress</string>

    <string name="progress_percentage">%1$d%% Completed</string>
    <string name="progress_to_go">%1$d more workouts to go</string>


    <string name="choose_workout">Choose This Workout</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="birthyear">Birth Year</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="goal">Goal</string>

    <string name="hint_email">example@example.com</string>
    <string name="hint_password">password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_fb">Sign in With Facebook</string>
    <string name="sign_in_goog">Sign in With Google</string>
    <string name="register_email">register with the email</string>

    <string name="sign_up">Sign Up</string>

    <string name="exercise_name">Exercise Name</string>
    <string name="tracker_weight">WEIGHT (kgs)</string>
    <string name="tracker_reps">REPS</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>

    <string name="save_profile">Save Profile</string>
    <string name="do_you_want_to_save">Do you want to save profile?</string>

    <string name="workout_title_format">%1$s (%2$s Weeks)</string>

    <string name="rep_x_weight">%1$s sets x %2$s reps</string>

    <string name="day_format_resource">Day %1$d</string>

    <string name="complete_this_workout">Complete This Workout</string>

    <string name="no_history">no history</string>

    <!--Strings Used for Toast Messages-->
    <string name="toast_message_current_plan_conflict">This plan is your current plan.</string>
    <string name="toast_message_successfully_added_new_plan">New plan is added!</string>

    <string name="toast_message_completed_todays_workout">Completed Today\'s Workout</string>

    <string name="toast_message_weak_password">Password is too weak</string>
    <string name="toast_message_invalid_email">Email is invalid</string>
    <string name="toast_message_email_conflict">User with Email already exists</string>
    <string name="toast_message_auth_failed">Authentication Failed</string>
    <string name="toast_message_connectivity_issue">Please check your network connectivity</string>
    <string name="toast_message_invalid_email_password">Please check your email and password</string>

    <!--Content Description-->
    <string name="content_description_logo">Logo</string>
    <string name="content_description_profile_picture">Profile Picture</string>
    <string name="content_description_open_tracker">Open Tracker</string>
    <string name="content_description_add_a_plan">Add a Plan</string>

    <!--Widgets-->
    <string name="title_widget_today">Today Workout</string>
    <string name="current_workout">Current Workout</string>
    <string name="workout_empty">No Workout</string>


</resources>
