<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:id="@+id/login_user_profile_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:src="@drawable/ic_account_circle_black_24dp"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/login_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="text"
        android:textSize="18sp"
        android:visibility="gone"
        android:hint="@string/profile_hint_name"/>

    <EditText
        android:id="@+id/login_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/profile_hint_email"
        android:textSize="18sp"
        android:visibility="gone"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_account_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:visibility="gone"
        android:hint="@string/profile_hint_password"/>

    <EditText
        android:id="@+id/login_account_password_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:visibility="gone"
        android:hint="@string/profile_hint_password"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/login_account_layout_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/gender"/>
        <Spinner
            android:id="@+id/spinner_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:prompt="@string/profile_hint_gender"
            android:spinnerMode="dialog"
            android:entries="@array/user_gender"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_account_layout_birthyear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/birthyear" />
        <EditText
            android:id="@+id/login_user_birthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:inputType="number"
            android:hint="@string/profile_hint_birthday"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_account_layout_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/goal"/>
        <Spinner
            android:id="@+id/spinner_goal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:prompt="@string/profile_hint_goal"
            android:spinnerMode="dialog"
            android:entries="@array/exercise_goal"/>
    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/login_next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />

</LinearLayout>
