<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/profile_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:padding="12dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/profile_activity_profile_picture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/content_description_profile_picture"
                android:src="@drawable/ic_account_circle_black_24dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="12dp">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/gridlayout_left_elements"
                        android:text="@string/email"/>
                    <TextView
                        android:id="@+id/profile_activity_email"
                        style="@style/gridlayout_right_elements"
                        android:hint="@string/profile_hint_email"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="12dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/gridlayout_left_elements"
                        android:text="@string/name"/>
                    <TextView
                        android:id="@+id/profile_activity_name"
                        style="@style/gridlayout_right_elements"
                        android:hint="@string/profile_hint_name"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="12dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/gridlayout_left_elements"
                        android:text="@string/birthyear"/>
                    <TextView
                        android:id="@+id/profile_activity_birthday"
                        style="@style/gridlayout_right_elements"
                        android:hint="@string/profile_hint_birthday"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="12dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/gridlayout_left_elements"
                        android:text="@string/gender"/>
                    <TextView
                        android:id="@+id/profile_activity_gender"
                        style="@style/gridlayout_right_elements"
                        android:hint="@string/profile_hint_gender"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginEnd="6dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            style="@style/gridlayout_left_elements"
                            android:layout_weight="1"
                            android:text="@string/height"/>
                        <EditText
                            style="@style/gridlayout_right_elements"
                            android:id="@+id/profile_activity_height"
                            android:layout_weight="1"
                            android:inputType="number"
                            android:hint="---"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginRight="12dp"
                            android:layout_marginEnd="12dp"
                            android:text="cm"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            style="@style/gridlayout_left_elements"
                            android:layout_weight="1"
                            android:text="@string/weight"/>
                        <EditText
                            style="@style/gridlayout_right_elements"
                            android:id="@+id/profile_activity_weight"
                            android:layout_weight="1"
                            android:inputType="number"
                            android:hint="---"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginRight="12dp"
                            android:layout_marginEnd="12dp"
                            android:text="kg"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_marginBottom="12dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/gridlayout_left_elements"
                        android:layout_weight="1"
                        android:text="@string/goal"/>
                    <Spinner
                        android:id="@+id/spinner_goal"
                        style="@style/gridlayout_right_elements"
                        android:layout_weight="1"
                        android:spinnerMode="dialog"
                        android:prompt="@string/profile_hint_goal"
                        android:entries="@array/exercise_goal"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
