<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="gabe.zabi.fitme_demo.ui.loginActivity.LoginUserInfo2Fragment"
    android:weightSum="3">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:id="@+id/login_user_profile_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_account_circle_black_24dp"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/login_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:inputType="text"
        android:hint="@string/profile_hint_name"/>

    <TextView
        android:id="@+id/login_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:hint="@string/profile_hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_user_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:inputType="text"
        android:hint="@string/profile_hint_nickname"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:id="@+id/spinner_goal"
        android:gravity="center"
        android:spinnerMode="dialog"
        android:prompt="@string/profile_hint_goal"
        android:entries="@array/exercise_goal"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/login_next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="NexT"/>

</LinearLayout>
